syntax = "proto3";

package participation;
option go_package = "github.com/clubo-app/clubben/protobuf/participation";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ParticipationService {
    rpc InviteToParty (InviteToPartyRequest) returns (PartyInvite) {};
    rpc DeclinePartyInvite (DeclinePartyInviteRequest) returns (google.protobuf.Empty) {};
    rpc AcceptPartyInvite (DeclinePartyInviteRequest) returns (PartyParticipant) {};
    rpc GetUserInvites (GetUserInvitesRequest) returns (PagedPartyInvites) {};

    rpc JoinParty (UserPartyRequest) returns (PartyParticipant) {};
    rpc LeaveParty (UserPartyRequest) returns (google.protobuf.Empty) {};
    rpc GetPartyParticipant (UserPartyRequest) returns (PartyParticipant) {};
    rpc GetPartyParticipants (GetPartyParticipantsRequest) returns (PagedPartyParticipants) {};
    rpc GetPartyRequests (GetPartyParticipantsRequest) returns (PagedPartyParticipants) {};

    rpc GetUserParticipations (GetUserParticipationsRequest) returns (PagedPartyParticipants) {};
    rpc GetManyUserParticipations (GetManyUserParticipationsRequest) returns (PagedPartyParticipants) {};
}

// Requests
message InviteToPartyRequest {
  string user_id = 1;
  string inviter_id = 2; 
  string party_id = 3;
  google.protobuf.Duration valid_for = 4;
}

message DeclinePartyInviteRequest {
  string user_id = 1;
  string inviter_id = 2; 
  string party_id = 3;
}

message UserPartyRequest {
  string user_id = 1;
  string party_id = 2;
}

message GetUserInvitesRequest {
  string user_id = 1;
  string next_page = 2;
  int32 limit = 3;
}

message GetPartyParticipantsRequest {
  string party_id = 1;
  string next_page = 2;
  int32 limit = 3;
}

message GetUserParticipationsRequest {
  string user_id = 1;
  string next_page = 2;
  int32 limit = 3;
}

message GetManyUserParticipationsRequest {
  repeated string user_ids = 1;
  string next_page = 2;
  int32 limit = 3;
}

message GetPartyParticipantsCountRequest {
  string party_id = 1;
}

message GetPartyParticipantsCountMapRequest {
  repeated string party_ids = 1;
}

// Responses
message PartyInvite {
  string user_id = 1;
  string inviter_id = 2;
  string party_id = 3;
  google.protobuf.Timestamp valid_until = 4;
}

message PartyParticipant {
  string user_id = 1;
  string party_id = 2;
  bool requested = 3;
  google.protobuf.Timestamp joined_at = 4;
  google.protobuf.Timestamp requested_at = 5;
}

message PagedPartyInvites {
  repeated PartyInvite invites = 1;
  string next_page = 2;
}

message PagedPartyParticipants {
  repeated PartyParticipant participants = 1;
  string next_page = 2;
}
